start script.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  font-size: 25px;
 }
 
 .option-boxes {
