--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,10 @@ p {
   height: 80%;
   width: 100%;
   border: black 1px solid;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  gap: 15%;
 }
 
 #question-box {
